--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,9 @@
             <a class="" href="team.html">
               Team
             </a>
+            <a class="" href="contact.html">
+              Contact Us
+            </a>
           </div>
         </div>
         <a class="navbar-brand" href="index.html">
@@ -86,7 +89,8 @@
                   <div class="detail_content">
                     <div>
                       <h1>
-                        Casamentos
+                        Photography <br>
+                        Studio
                       </h1>
                       <a href="" class="">
                         Read more
@@ -98,8 +102,8 @@
                   <div class="detail_content">
                     <div>
                       <h1>
-                        Festas de <br>
-                        Anos
+                        Photography <br>
+                        Studio
                       </h1>
                       <a href="" class="">
                         Read more
@@ -111,7 +115,8 @@
                   <div class="detail_content">
                     <div>
                       <h1>
-                        Batizados
+                        Photography <br>
+                        Studio
                       </h1>
                       <a href="" class="">
                         Read more
@@ -165,7 +170,7 @@
         <div class="detail-box detail_box_common col-lg-4 col-md-5 text_center">
           <div class="heading_container heading_center">
             <h2>
-              Sobre Mim
+              About Us
             </h2>
           </div>
           <p>
@@ -259,11 +264,13 @@
         <div class="col-lg-4 col-md-5 detail-box detail_box_common text_center">
           <div class="heading_container heading_center">
             <h2>
-              Reviews
+              Our Creative Team
             </h2>
           </div>
           <p>
-            
+            The point of using LoremIt is a long established fact that a reader will be distracted by the readable
+            content
+            of a page when looking at its layout. The point of using Lorem
           </p>
         </div>
         <div class="col-lg-8 col-md-7 team_container text_center">
@@ -275,18 +282,16 @@
                 </div>
                 <div class="detail-box ">
                   <h5>
-                    Manuela <br><br>
-                    <h6>"Os convidados gostaram muito
-                      dos números de magia e de ti, correu
-                      muito bem, parabéns, quando formos
-                      ver as fotografias separo as tuas e
-                      depois envio, boa sorte para os próximos
-                      trabalhos"<br><br>
-                      "Já agora, o Rafael disse-me "mãe o
-                      mágico já foi? eu queria mais, eu gostei
-                      muito dele"
-                    </h6>
+                    Jesssica Rai
                   </h5>
+                  <div class="social-box">
+                    <a href="">
+                      <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://www.instagram.com/diogomagico/">
+                      <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -299,6 +304,20 @@
                   <h5>
                     John Wayne
                   </h5>
+                  <div class="social-box">
+                    <a href="">
+                      <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </a>
+                    <a href="">
+                      <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </a>
+                    <a href="">
+                      <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    </a>
+                    <a href="">
+                      <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -311,6 +330,20 @@
                   <h5>
                     Chritina Stark
                   </h5>
+                  <div class="social-box">
+                    <a href="">
+                      <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </a>
+                    <a href="">
+                      <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </a>
+                    <a href="">
+                      <i class="fa fa-linkedin" aria-hidden="true"></i>
+                    </a>
+                    <a href="">
+                      <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -343,7 +376,7 @@
                 <a href="">
                   <i class="fa fa-map-marker" aria-hidden="true"></i>
                   <span>
-                    Porto / V.N.Gaia
+                    Location
                   </span>
                 </a>
                 <a href="">
@@ -358,11 +391,16 @@
                     josediogoguedes@gmail.com
                   </span>
                 </a>
-                <a href="https://www.instagram.com/diogomagico/">
+              </div>
+              <div class="info_social">
+                <a href="https://www.facebook.com/josediogoguedes">
+                  <i class="fa fa-facebook" aria-hidden="true"></i>
+                </a>
+                <a href="">
+                  <i class="fa fa-tiktok" aria-hidden="true"></i>
+                </a>
+                <a href="">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
-                  <span>
-                    @diogomagico
-                  </span>
                 </a>
               </div>
             </div>
