--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
   <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
-<body>
+<body class="sub_page">
   <div class="hero_area">
     <!-- header section strats -->
     <header class="header_section">
@@ -50,13 +50,13 @@
             </button>
           </div>
           <div class="overlay-content">
-            <a class="active" href="index.html">
+            <a class="" href="index.html">
               Home
             </a>
             <a class="" href="about.html">
               About
             </a>
-            <a class="" href="portfolio.html">
+            <a class="active" href="portfolio.html">
               Portfolio
             </a>
             <a class="" href="team.html">
@@ -75,113 +75,7 @@
       </nav>
     </header>
     <!-- end header section -->
-    <!-- slider section -->
-    <section class="slider_section position-relative">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="detail-box col-lg-4 col-md-5">
-            <div id="" class="carousel slide slider_text_carousel" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <div class="detail_content">
-                    <div>
-                      <h1>
-                        Casamentos
-                      </h1>
-                      <a href="" class="">
-                        Read more
-                      </a>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <div class="detail_content">
-                    <div>
-                      <h1>
-                        Festas de <br>
-                        Anos
-                      </h1>
-                      <a href="" class="">
-                        Read more
-                      </a>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <div class="detail_content">
-                    <div>
-                      <h1>
-                        Batizados
-                      </h1>
-                      <a href="" class="">
-                        Read more
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="img-box col-lg-8 col-md-7">
-            <div id="" class="carousel slide slider_image_carousel carousel-fade" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="images/slider-img.jpg" alt="" />
-                </div>
-                <div class="carousel-item">
-                  <img src="images/slider-img2.jpg" alt="" />
-                </div>
-                <div class="carousel-item">
-                  <img src="images/slider-img3.jpg" alt="" />
-                </div>
-              </div>
-            </div>
-            <div class="carousel_btn-box">
-              <a class="slider_btn_prev" href="" role="button" data-slide="prev">
-                <i class="fa fa-long-arrow-left" aria-hidden="true"></i>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="slider_btn_next" href="" role="button" data-slide="next">
-                <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </section>
-    <!-- end slider section -->
   </div>
-
-  <!-- about section -->
-
-  <section class="about_section ">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="img-box col-lg-8 col-md-7">
-          <img src="images/about-img.jpg" alt="" />
-        </div>
-        <div class="detail-box detail_box_common col-lg-4 col-md-5 text_center">
-          <div class="heading_container heading_center">
-            <h2>
-              Sobre Mim
-            </h2>
-          </div>
-          <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of using LoremIt is a long established fact that a reader will be
-            distracted by the readable content of a page when looking at its layout. The point of using Lorem
-          </p>
-          <a href="">
-            Read More
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end about section -->
 
 
   <!-- portfolio section -->
@@ -244,82 +138,13 @@
         </div>
       </div>
       <div>
-        <a href="" class="read_btn">
+        <a href="https://photos.app.goo.gl/G44UkoQmty28w5m29" class="read_btn">
           See More
         </a>
       </div>
     </div>
   </section>
   <!-- end portfolio section -->
-
-  <!-- team section -->
-  <section class="team_section">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-4 col-md-5 detail-box detail_box_common text_center">
-          <div class="heading_container heading_center">
-            <h2>
-              Reviews
-            </h2>
-          </div>
-          <p>
-            
-          </p>
-        </div>
-        <div class="col-lg-8 col-md-7 team_container text_center">
-          <div class="row">
-            <div class="col-sm-6 mx-auto">
-              <div class="team_box">
-                <div class="img-box">
-                  <img src="images/team1.jpg" alt="">
-                </div>
-                <div class="detail-box ">
-                  <h5>
-                    Manuela <br><br>
-                    <h6>"Os convidados gostaram muito
-                      dos números de magia e de ti, correu
-                      muito bem, parabéns, quando formos
-                      ver as fotografias separo as tuas e
-                      depois envio, boa sorte para os próximos
-                      trabalhos"<br><br>
-                      "Já agora, o Rafael disse-me "mãe o
-                      mágico já foi? eu queria mais, eu gostei
-                      muito dele"
-                    </h6>
-                  </h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-6 mx-auto">
-              <div class="team_box">
-                <div class="img-box">
-                  <img src="images/team2.jpg" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    John Wayne
-                  </h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-6 mx-auto">
-              <div class="team_box">
-                <div class="img-box">
-                  <img src="images/team3.jpg" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Chritina Stark
-                  </h5>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- end team section -->
 
   <!-- contact section -->
 
@@ -343,26 +168,34 @@
                 <a href="">
                   <i class="fa fa-map-marker" aria-hidden="true"></i>
                   <span>
-                    Porto / V.N.Gaia
+                    Location
                   </span>
                 </a>
                 <a href="">
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span>
-                    Call +351 965032713
+                    Call +01 1234567890
                   </span>
                 </a>
                 <a href="">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                   <span>
-                    josediogoguedes@gmail.com
+                    demo@gmail.com
                   </span>
                 </a>
-                <a href="https://www.instagram.com/diogomagico/">
+              </div>
+              <div class="info_social">
+                <a href="">
+                  <i class="fa fa-facebook" aria-hidden="true"></i>
+                </a>
+                <a href="">
+                  <i class="fa fa-twitter" aria-hidden="true"></i>
+                </a>
+                <a href="">
+                  <i class="fa fa-linkedin" aria-hidden="true"></i>
+                </a>
+                <a href="">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
-                  <span>
-                    @diogomagico
-                  </span>
                 </a>
               </div>
             </div>
@@ -373,6 +206,7 @@
   </section>
 
   <!-- end contact section -->
+
 
   <!-- footer section -->
   <footer class="footer_section">
