--- a/index.html
+++ b/index.html
@@ -69,9 +69,6 @@
             Rei de Espadas Eventos
           </span>
         </a>
-        <a href="" class="call_btn">
-          Call Us Now
-        </a>
       </nav>
     </header>
     <!-- end header section -->
@@ -169,13 +166,12 @@
             </h2>
           </div>
           <p>
-            It is a long established fact that a reader will be distracted by the readable content of a page when
-            looking at its layout. The point of using LoremIt is a long established fact that a reader will be
-            distracted by the readable content of a page when looking at its layout. The point of using Lorem
+            Olá, o meu nome é Diogo, tenho 24 Anos e a magia já está na minha vida desde os meus 10 anos.
+            Sempre me encantou trazer fortes emoções aos que me rodeiam e ver as suas caras de espanto e alegria.<br><br>
+            Sou Engenheiro Informático mas englobo sempre a magia em paralelo na minha vida. Frases como 
+            "Tens mesmo jeito para isto!" e "Fazes isto profissionalmente?" foram dos principais motivos que me trouxeram até aqui.<br>
+            Espero que consideres entrar em contacto e falar um pouco comigo !
           </p>
-          <a href="">
-            Read More
-          </a>
         </div>
       </div>
     </div>
@@ -327,9 +323,8 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-8 map_container">
-          <div class="map">
-            <div id="googleMap"></div>
-          </div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48059.71104113359!2d-8.663153125662234!3d41.1622002288143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd2465abc4e153c1%3A0xa648d95640b114bc!2sPorto!5e0!3m2!1spt-PT!2spt!4v1697996890877!5m2!1spt-PT!2spt" 
+          width="1300" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="col-md-4 detail-box detail_box_common">
           <div>
@@ -349,7 +344,7 @@
                 <a href="">
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span>
-                    Call +351 965032713
+                    +351 965032713
                   </span>
                 </a>
                 <a href="">
