--- a/portfolio.html
+++ b/portfolio.html
@@ -152,9 +152,9 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-8 map_container">
-          <div class="map">
-            <div id="googleMap"></div>
-          </div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48059.71104113359!2d-8.663153125662234!3d41.1622002288143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd2465abc4e153c1%3A0xa648d95640b114bc!2sPorto!5e0!3m2!1spt-PT!2spt!4v1697996890877!5m2!1spt-PT!2spt" 
+          width="1300" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
         </div>
         <div class="col-md-4 detail-box detail_box_common">
           <div>
@@ -168,34 +168,26 @@
                 <a href="">
                   <i class="fa fa-map-marker" aria-hidden="true"></i>
                   <span>
-                    Location
+                    Porto / V.N.Gaia
                   </span>
                 </a>
                 <a href="">
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span>
-                    Call +01 1234567890
+                    +351 965032713
                   </span>
                 </a>
                 <a href="">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                   <span>
-                    demo@gmail.com
+                    josediogoguedes@gmail.com
                   </span>
                 </a>
-              </div>
-              <div class="info_social">
-                <a href="">
-                  <i class="fa fa-facebook" aria-hidden="true"></i>
-                </a>
-                <a href="">
-                  <i class="fa fa-twitter" aria-hidden="true"></i>
-                </a>
-                <a href="">
-                  <i class="fa fa-linkedin" aria-hidden="true"></i>
-                </a>
-                <a href="">
+                <a href="https://www.instagram.com/diogomagico/">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
+                  <span>
+                    @diogomagico
+                  </span>
                 </a>
               </div>
             </div>
