--- a/team.html
+++ b/team.html
@@ -203,34 +203,26 @@
                 <a href="">
                   <i class="fa fa-map-marker" aria-hidden="true"></i>
                   <span>
-                    Location
+                    Porto / V.N.Gaia
                   </span>
                 </a>
                 <a href="">
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span>
-                    Call +01 1234567890
+                    +351 965032713
                   </span>
                 </a>
                 <a href="">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                   <span>
-                    demo@gmail.com
+                    josediogoguedes@gmail.com
                   </span>
                 </a>
-              </div>
-              <div class="info_social">
-                <a href="">
-                  <i class="fa fa-facebook" aria-hidden="true"></i>
-                </a>
-                <a href="">
-                  <i class="fa fa-twitter" aria-hidden="true"></i>
-                </a>
-                <a href="">
-                  <i class="fa fa-linkedin" aria-hidden="true"></i>
-                </a>
-                <a href="">
+                <a href="https://www.instagram.com/diogomagico/">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
+                  <span>
+                    @diogomagico
+                  </span>
                 </a>
               </div>
             </div>
