--- a/about.html
+++ b/about.html
@@ -60,8 +60,8 @@
             <a class="" href="portfolio.html">
               Portfolio
             </a>
-            <a class="" href="team.html">
-              Team
+            <a class="" href="review.html">
+              Review
             </a>
           </div>
         </div>
@@ -70,8 +70,8 @@
             Rei de Espadas Eventos
           </span>
         </a>
-        <a href="" class="call_btn">
-          Call Us Now
+        <a href="https://ig.me/m/diogomagico" class="call_btn">
+          Contacta-me 
         </a>
       </nav>
     </header>
@@ -180,8 +180,8 @@
             <a class="" href="portfolio.html">
               Portfolio
             </a>
-            <a class="" href="team.html">
-              Team
+            <a class="" href="review.html">
+              Review
             </a>
           </div>
         </div>
