--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <a class="" href="portfolio.html">
               Portfolio
             </a>
-            <a class="" href="team.html">
-              Team
+            <a class="" href="review.html">
+              Review
             </a>
           </div>
         </div>
@@ -248,8 +248,8 @@
   </section>
   <!-- end portfolio section -->
 
-  <!-- team section -->
-  <section class="team_section">
+  <!-- review section -->
+  <section class="review_section">
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-4 col-md-5 detail-box detail_box_common text_center">
@@ -259,54 +259,33 @@
             </h2>
           </div>
           <p>
-            
+            <div>
+              <a href="review.html" class="read_btn">
+                See More
+              </a>
+            </div>
           </p>
         </div>
-        <div class="col-lg-8 col-md-7 team_container text_center">
+        <div class="col-lg-8 col-md-7 review_container text_center">
           <div class="row">
             <div class="col-sm-6 mx-auto">
-              <div class="team_box">
+              <div class="review_box">
                 <div class="img-box">
-                  <img src="images/team1.jpg" alt="">
-                </div>
-                <div class="detail-box ">
-                  <h5>
-                    Manuela <br><br>
-                    <h6>"Os convidados gostaram muito
-                      dos números de magia e de ti, correu
-                      muito bem, parabéns, quando formos
-                      ver as fotografias separo as tuas e
-                      depois envio, boa sorte para os próximos
-                      trabalhos"<br><br>
-                      "Já agora, o Rafael disse-me "mãe o
-                      mágico já foi? eu queria mais, eu gostei
-                      muito dele"
-                    </h6>
-                  </h5>
+                  <img src="images/print1.jpg" alt="">
                 </div>
               </div>
             </div>
             <div class="col-sm-6 mx-auto">
-              <div class="team_box">
+              <div class="review_box">
                 <div class="img-box">
-                  <img src="images/team2.jpg" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    John Wayne
-                  </h5>
+                  <img src="images/print2.jpg" alt="">
                 </div>
               </div>
             </div>
             <div class="col-sm-6 mx-auto">
-              <div class="team_box">
+              <div class="review_box">
                 <div class="img-box">
-                  <img src="images/team3.jpg" alt="">
-                </div>
-                <div class="detail-box">
-                  <h5>
-                    Chritina Stark
-                  </h5>
+                  <img src="images/print3.jpg" alt="">
                 </div>
               </div>
             </div>
@@ -315,7 +294,7 @@
       </div>
     </div>
   </section>
-  <!-- end team section -->
+  <!-- end review section -->
 
   <!-- contact section -->
 
@@ -335,19 +314,19 @@
             </div>
             <div class="info_contact">
               <div class="contact_link_box">
-                <a href="">
+                <a>
                   <i class="fa fa-map-marker" aria-hidden="true"></i>
                   <span>
                     Porto / V.N.Gaia
                   </span>
                 </a>
-                <a href="">
+                <a href="https://wa.me/351965032713">
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span>
                     +351 965032713
                   </span>
                 </a>
-                <a href="">
+                <a href="mailto:josediogoguedes@gmail.com">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                   <span>
                     josediogoguedes@gmail.com
@@ -391,8 +370,8 @@
             <a class="" href="portfolio.html">
               Portfolio
             </a>
-            <a class="" href="team.html">
-              Team
+            <a class="" href="review.html">
+              Review
             </a>
           </div>
         </div>
