--- a/portfolio.html
+++ b/portfolio.html
@@ -59,8 +59,8 @@
             <a class="active" href="portfolio.html">
               Portfolio
             </a>
-            <a class="" href="team.html">
-              Team
+            <a class="" href="review.html">
+              Review
             </a>
           </div>
         </div>
@@ -222,8 +222,8 @@
             <a class="" href="portfolio.html">
               Portfolio
             </a>
-            <a class="" href="team.html">
-              Team
+            <a class="" href="review.html">
+              Review
             </a>
           </div>
         </div>
