--- a/review.html
+++ b/review.html
@@ -59,8 +59,8 @@
             <a class="" href="portfolio.html">
               Portfolio
             </a>
-            <a class="active" href="team.html">
-              Team
+            <a class="active" href="review.html">
+              Review
             </a>
           </div>
         </div>
@@ -78,14 +78,14 @@
   </div>
 
 
-  <!-- team section -->
-  <section class="team_section">
+  <!-- review section -->
+  <section class="review_section">
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-4 col-md-5 detail-box detail_box_common text_center">
           <div class="heading_container heading_center">
             <h2>
-              Our Creative Team
+              Our Creative Review
             </h2>
           </div>
           <p>
@@ -94,12 +94,12 @@
             of a page when looking at its layout. The point of using Lorem
           </p>
         </div>
-        <div class="col-lg-8 col-md-7 team_container text_center">
+        <div class="col-lg-8 col-md-7 review_container text_center">
           <div class="row">
             <div class="col-sm-6 mx-auto">
-              <div class="team_box">
+              <div class="review_box">
                 <div class="img-box">
-                  <img src="images/team1.jpg" alt="">
+                  <img src="images/review1.jpg" alt="">
                 </div>
                 <div class="detail-box ">
                   <h5>
@@ -123,9 +123,9 @@
               </div>
             </div>
             <div class="col-sm-6 mx-auto">
-              <div class="team_box">
+              <div class="review_box">
                 <div class="img-box">
-                  <img src="images/team2.jpg" alt="">
+                  <img src="images/review2.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -149,9 +149,9 @@
               </div>
             </div>
             <div class="col-sm-6 mx-auto">
-              <div class="team_box">
+              <div class="review_box">
                 <div class="img-box">
-                  <img src="images/team3.jpg" alt="">
+                  <img src="images/review3.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -179,7 +179,7 @@
       </div>
     </div>
   </section>
-  <!-- end team section -->
+  <!-- end review section -->
 
   <!-- contact section -->
 
@@ -256,8 +256,8 @@
             <a class="" href="portfolio.html">
               Portfolio
             </a>
-            <a class="" href="team.html">
-              Team
+            <a class="" href="review.html">
+              Review
             </a>
           </div>
         </div>
