--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@
               Home
             </a>
             <a class="" href="about.html">
-              About
+              Sobre Mim
             </a>
             <a class="" href="portfolio.html">
               Portfolio
