--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
               Home
             </a>
             <a class="" href="about.html">
-              About
+              Sobre Mim
             </a>
             <a class="active" href="portfolio.html">
               Portfolio
@@ -139,7 +139,7 @@
       </div>
       <div>
         <a href="https://photos.app.goo.gl/G44UkoQmty28w5m29" class="read_btn">
-          See More
+          Ver Mais
         </a>
       </div>
     </div>
@@ -217,7 +217,7 @@
               Home
             </a>
             <a class="" href="about.html">
-              About
+              Sobre Mim
             </a>
             <a class="" href="portfolio.html">
               Portfolio
