--- a/review.html
+++ b/review.html
@@ -54,7 +54,7 @@
               Home
             </a>
             <a class="" href="about.html">
-              About
+              Sobre Mim
             </a>
             <a class="" href="portfolio.html">
               Portfolio
@@ -251,7 +251,7 @@
               Home
             </a>
             <a class="" href="about.html">
-              About
+              Sobre Mim
             </a>
             <a class="" href="portfolio.html">
               Portfolio
