falta adicionar portefólio

--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
                     josediogoguedes@gmail.com
                   </span>
                 </a>
-                <a href="https://www.instagram.com/diogomagico/">
+                <a href="https://ig.me/m/diogomagico">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
                   <span>
                     @diogomagico
