--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
             <a class="" href="about.html">
               Sobre Mim
             </a>
-            <a class="" href="portfolio.html">
-              Portfolio
+            <a class="" href="https://www.instagram.com/diogomagico/">
+              Instagram
             </a>
-            <!-- <a class="" href="review.html">
-              Review
-            </a> -->
+            <a class="" href="https://wa.me/351965032713">
+              Whatsapp
+            </a>
           </div>
         </div>
         <a class="navbar-brand" href="index.html">
@@ -220,11 +220,11 @@
           
         </div>
       </div>
-      <div>
+      <!-- <div>
         <a href="portfolio.html" class="read_btn">
           Ver Mais
         </a>
-      </div>
+      </div> -->
     </div>
   </section>
   <!-- end portfolio section -->
@@ -349,12 +349,6 @@
             </a>
             <a class="" href="about.html">
               Sobre Mim
-            </a>
-            <a class="" href="portfolio.html">
-              Portfolio
-            </a>
-            <a class="" href="review.html">
-              Review
             </a>
           </div>
         </div>
