--- a/about.html
+++ b/about.html
@@ -88,6 +88,8 @@
         </div>
         <div class="detail-box detail_box_common col-lg-4 col-md-5 text_center">
           <div class="heading_container heading_center">
+            <img src="images/perfil.png" alt="" />
+            <br><br>
             <h2>
               Sobre Mim
             </h2>
