--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
         </div>
         <div class="detail-box detail_box_common col-lg-4 col-md-5 text_center">
           <div class="heading_container heading_center">
+            <img src="images/perfil.png" alt="" />
+            <br><br>
             <h2>
               Sobre Mim
             </h2>
@@ -187,7 +189,7 @@
 
   <!-- portfolio section -->
 
-  <section class="portfolio_section layout_padding">
+  <!-- <section class="portfolio_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -220,13 +222,13 @@
           
         </div>
       </div>
-      <!-- <div>
+       <div>
         <a href="portfolio.html" class="read_btn">
           Ver Mais
         </a>
-      </div> -->
+      </div>
     </div>
-  </section>
+  </section> -->
   <!-- end portfolio section -->
 
   <!-- review section -->
@@ -315,11 +317,14 @@
                     josediogoguedes@gmail.com
                   </span>
                 </a>
-                <a href="https://ig.me/m/diogomagico">
+                <a href="https://www.instagram.com/diogomagico/">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
                   <span>
                     @diogomagico
                   </span>
+                </a>
+                <a rel='nofollow' href='https://www.casamentos.pt/animacao-casamentos/rei-de-espadas-eventos--e153303' 
+                title='Casamentos.pt'><img alt='Casamentos.pt' src='https://www.casamentos.pt/images/sellos/partner--pp153303.png' style='border-width:0px;' /></a>
                 </a>
               </div>
             </div>
