--- a/about.html
+++ b/about.html
@@ -126,29 +126,32 @@
             </div>
             <div class="info_contact">
               <div class="contact_link_box">
-                <a href="">
+                <a>
                   <i class="fa fa-map-marker" aria-hidden="true"></i>
                   <span>
                     Porto / V.N.Gaia
                   </span>
                 </a>
-                <a href="">
+                <a href="https://wa.me/351965032713">
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span>
                     +351 965032713
                   </span>
                 </a>
-                <a href="">
+                <a href="mailto:josediogoguedes@gmail.com">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                   <span>
                     josediogoguedes@gmail.com
                   </span>
                 </a>
-                <a href="https://ig.me/m/diogomagico">
+                <a href="https://www.instagram.com/diogomagico/">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
                   <span>
                     @diogomagico
                   </span>
+                </a>
+                <a rel='nofollow' href='https://www.casamentos.pt/animacao-casamentos/rei-de-espadas-eventos--e153303' 
+                title='Casamentos.pt'><img alt='Casamentos.pt' src='https://www.casamentos.pt/images/sellos/partner--pp153303.png' style='border-width:0px;' /></a>
                 </a>
               </div>
             </div>
@@ -178,12 +181,6 @@
             </a>
             <a class="" href="about.html">
               Sobre Mim
-            </a>
-            <a class="" href="portfolio.html">
-              Portfolio
-            </a>
-            <a class="" href="review.html">
-              Review
             </a>
           </div>
         </div>
