--- a/about.html
+++ b/about.html
@@ -51,17 +51,17 @@
             </button>
           </div>
           <div class="overlay-content">
-            <a class="" href="index.html">
+            <a class="active" href="index.html">
               Home
             </a>
-            <a class="active" href="about.html">
+            <a class="" href="about.html">
               Sobre Mim
             </a>
-            <a class="" href="portfolio.html">
-              Portfolio
+            <a class="" href="https://www.instagram.com/diogomagico/">
+              Instagram
             </a>
-            <a class="" href="review.html">
-              Review
+            <a class="" href="https://wa.me/351965032713">
+              Whatsapp
             </a>
           </div>
         </div>
