--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
             <a class="" href="about.html">
               Sobre Mim
             </a>
+            <a class="" href="">
+              Assinar Newsletter
+            </a>
             <a class="" href="https://www.instagram.com/diogomagico/">
               Instagram
             </a>
@@ -252,6 +255,85 @@
               </a>
             </div>
           </p>
+
+          <!-- Mailchimp -->
+          <!-- PROBLEMA !! Não é responsivo -->
+          <!-- <div id="mc_embed_shell">
+            <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+        
+          <div id="mc_embed_signup">
+            <form action="https://reideespadas.us21.list-manage.com/subscribe/post?u=862c419a21df2361fbcb41ffa&amp;id=7211086116&amp;v_id=153&amp;f_id=00d7f0e6f0" 
+                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+                <div id="mc_embed_signup_scroll">
+                  <h2>Inscreva-se na nossa Newsletter</h2>
+                    <div class="mc-field-group">
+                      <label for="mce-EMAIL">Endereço de e-mail 
+                        <span class="asterisk">*</span>
+                      </label>
+                      <input type="email" name="EMAIL" class="required email" id="mce-EMAIL" required="" value="">
+                    </div>
+                    <div class="mc-field-group">
+                      <label for="mce-FNAME">
+                        Nome
+                      </label>
+                      <input type="text" name="FNAME" class=" text" id="mce-FNAME" value="">
+                    </div>
+                    <div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group">
+                      <div class="content__gdpr">
+                        <label>Marketing Permissions</label>
+                        <fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
+                          <label class="checkbox subfield" for="gdpr1838">
+                            <input type="checkbox" id="gdpr_1838" name="gdpr[1838]" class="gdpr" value="Y">
+                            <span>Email</span>
+                          </label>
+                        </fieldset>
+                        <p>You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit our website.</p>
+                      </div>
+                      <div class="content__gdprLegal">
+                        <p>We use Mailchimp as our marketing platform. 
+                          By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing. 
+                          <a href="https://mailchimp.com/legal/terms">
+                            <span>
+                              Learn more
+                            </span>
+                          </a> 
+                          about Mailchimp's privacy practices.
+                        </p>
+                      </div>
+                    </div>
+                    <div hidden=""><input type="hidden" name="tags" value="2973741"></div>
+                    <div id="mce-responses" class="clear foot">
+                      <div class="response" id="mce-error-response" style="display: none;"></div>
+                      <div class="response" id="mce-success-response" style="display: none;"></div>
+                    </div>
+                  <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                    // real people should not fill this in and expect good things - do not remove this or risk form bot signups
+                    <input type="text" name="b_862c419a21df2361fbcb41ffa_7211086116" tabindex="-1" value="">
+                  </div>
+                  <div class="optionalParent">
+                    <div class="clear foot">
+                        <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="read_btn" value="Subscribe">
+                        <a href="http://eepurl.com/iFnT3U" title="Mailchimp - marketing por e-mail fácil e divertido">
+                          <span style="display: inline-block; background-color: transparent; border-radius: 4px;">
+                            <img class="refferal_badge" 
+                            src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-light.svg" 
+                            alt="Intuit Mailchimp" 
+                            style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;">
+                          </span>
+                        </a>
+                    </div>
+                  </div>
+                </div>
+            </form>
+          </div>
+            <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+            <script type="text/javascript">(
+              function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='FNAME';ftypes[2]='text';fnames[1]='LNAME';ftypes[1]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery)
+              );
+              var $mcj = jQuery.noConflict(true);
+              </script>
+          </div> -->
+          <!-- End of Mailchimp -->
         </div>
         <div class="col-lg-8 col-md-7 review_container text_center">
           <div class="row">
@@ -307,19 +389,19 @@
                     Porto / V.N.Gaia
                   </span>
                 </a>
-                <a href="https://wa.me/351965032713">
+                <a href="https://wa.me/351965032713" title="Whatsapp">
                   <i class="fa fa-phone" aria-hidden="true"></i>
                   <span>
                     +351 965032713
                   </span>
                 </a>
-                <a href="mailto:josediogoguedes@gmail.com">
+                <a href="mailto:josediogoguedes@gmail.com" title="Gmail">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                   <span>
                     josediogoguedes@gmail.com
                   </span>
                 </a>
-                <a href="https://www.instagram.com/diogomagico/">
+                <a href="https://www.instagram.com/diogomagico/" title="Instagram">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
                   <span>
                     @diogomagico
