--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             <a class="" href="about.html">
               Sobre Mim
             </a>
-            <a class="" href="">
+            <!-- <a class="" href="">
               Assinar Newsletter
-            </a>
+            </a> -->
             <a class="" href="https://www.instagram.com/diogomagico/">
               Instagram
             </a>
