--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             <a class="" href="about.html">
               Sobre Mim
             </a>
-            <!-- <a class="" href="">
-              Assinar Newsletter
-            </a> -->
+            <a class="" href="http://eepurl.com/iFuSRU">
+              Newsletter
+            </a>
             <a class="" href="https://www.instagram.com/diogomagico/">
               Instagram
             </a>
@@ -255,7 +255,6 @@
               </a>
             </div>
           </p>
-
           <!-- Mailchimp -->
           <!-- PROBLEMA !! Não é responsivo -->
           <!-- <div id="mc_embed_shell">
