--- a/index.html
+++ b/index.html
@@ -391,10 +391,10 @@
                     +351 965032713
                   </span>
                 </a>
-                <a href="mailto:josediogoguedes@gmail.com" title="Gmail">
+                <a href="mailto:reideespadaseventos@gmail.com" title="Gmail">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                   <span>
-                    josediogoguedes@gmail.com
+                    reideespadaseventos@gmail.com
                   </span>
                 </a>
                 <a href="https://www.instagram.com/diogomagico/" title="Instagram">
