--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="img-box col-lg-8 col-md-7">
-          <img src="images/about-img.jpg" alt="" />
+          <img src="images/about-img.webp" alt="" />
         </div>
         <div class="detail-box detail_box_common col-lg-4 col-md-5 text_center">
           <div class="heading_container heading_center">
