Alterei pra webp

--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
             <div id="" class="carousel slide slider_image_carousel carousel-fade" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="images/slider-img.jpg" alt="" />
+                  <img src="images/slider-img.webp" alt="" />
                 </div>
                 <div class="carousel-item">
-                  <img src="images/slider-img2.jpg" alt="" />
+                  <img src="images/slider-img2.webp" alt="" />
                 </div>
                 <div class="carousel-item">
-                  <img src="images/slider-img3.jpg" alt="" />
+                  <img src="images/slider-img3.webp" alt="" />
                 </div>
               </div>
             </div>
@@ -336,21 +336,21 @@
             <div class="col-sm-6 mx-auto">
               <div class="review_box">
                 <div class="img-box">
-                  <img src="images/print1.jpg" alt="">
+                  <img src="images/print1.webp" alt="">
                 </div>
               </div>
             </div>
             <div class="col-sm-6 mx-auto">
               <div class="review_box">
                 <div class="img-box">
-                  <img src="images/print2.jpg" alt="">
+                  <img src="images/print2.webp" alt="">
                 </div>
               </div>
             </div>
             <div class="col-sm-6 mx-auto">
               <div class="review_box">
                 <div class="img-box">
-                  <img src="images/print3.jpg" alt="">
+                  <img src="images/print3.webp" alt="">
                 </div>
               </div>
             </div>
