--- a/about.html
+++ b/about.html
@@ -138,10 +138,10 @@
                     +351 965032713
                   </span>
                 </a>
-                <a href="mailto:josediogoguedes@gmail.com">
+                <a href="mailto:reideespadaseventos@gmail.com">
                   <i class="fa fa-envelope" aria-hidden="true"></i>
                   <span>
-                    josediogoguedes@gmail.com
+                    reideespadaseventos@gmail.com
                   </span>
                 </a>
                 <a href="https://www.instagram.com/diogomagico/">
