--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <!-- Icon -->
+  <link rel="shortcut icon" type="imagex/png" href="./images/icon.ico">
 <!-- Mailchimp -->
   <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/545fecea63d64e1da3d1ce133/ebf20aa7145f5b196990b005e.js");</script>
 <!-- Google tag (gtag.js) -->
