--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+  <script src="https://kit.fontawesome.com/28bf1313d8.js" crossorigin="anonymous"></script>
+
   <!-- Icon -->
   <link rel="shortcut icon" type="imagex/png" href="./images/icon.ico">
 <!-- Mailchimp -->
@@ -405,6 +407,13 @@
                     @diogomagico
                   </span>
                 </a>
+                
+                <a href="https://www.tiktok.com/@diogomagicooo" title="Tiktok">
+                  <i class="fa-brands fa-tiktok"></i>
+                  <span>
+                    @diogomagicooo
+                  </span>
+                </a>
                 <a rel='nofollow' href='https://www.casamentos.pt/animacao-casamentos/rei-de-espadas-eventos--e153303' 
                 title='Casamentos.pt'><img alt='Casamentos.pt' src='https://www.casamentos.pt/images/sellos/partner--pp153303.png' style='border-width:0px;' /></a>
                 </a>
@@ -422,6 +431,7 @@
   <script src="js/bootstrap.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
   </script>
+  
   <script src="js/custom.js"></script>
   <!-- Google Map -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
